assets/CSS/media-query.css
@media only screen and (max-width: 767px) {
  .none768px {
    display: none;
  }
  .medium {
    display: none;
  }
}

@media only screen and (max-width: 991px) {
  .left-header {
    display: none;
  }
  .title {
    width: 140px;
  }

  .navigation {
    display: none !important;
  }
}

@media only screen and (min-width: 768px) {
  .button2 {
    font-size: 15px;
  }

  .option-img {
    width: 40px;
  }

  .top-story {
    max-height: 500px;
  }

  .heroes {
    max-height: 600px;
  }
}

@media only screen and (min-width: 992px) {
  .header {
    height: 100px;
  }
  .none992px {
    display: none;
  }

  .debate {
    max-height: 300px;
  }

  .opinion {
    max-height: 700px;
  }
}

@media (max-width: 1150px) and (min-width: 768px){
  .top-story {
    max-height: 500px;
  }

  .heroes {
    max-height: 600px;
  }
}

